retrieveUnpackaged/objects/Academy__c.object
<CustomObject>
    <fields>
        <fullName>Board_University__c</fullName>
        <label>Board/ University</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>College_Name__c</fullName>
        <label>College Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Academy</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Certificate name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Academics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>